--- a/.github/workflows/use_action.yml
+++ b/.github/workflows/use_action.yml
@@ -24,7 +24,6 @@ jobs:
 
       - uses: actions/checkout@v4
 
-      # Minimal publish
       - uses: mscno/setup-goose@master
 
       - run: goose -version
@@ -45,3 +44,8 @@ jobs:
       - name: Check installed version (tip)
         run: |
           goose -version
+
+      # check specific action version
+      - uses: mscno/setup-goose@v1
+
+      - run: goose -version
